# learning

./: .gitignore  README.md
experiment/: Cargo.toml
experiment/.cargo/: config.toml
experiment/art/: Makefile  main.cpp
experiment/art-rs/: Cargo.toml
experiment/art-rs/src/: lib.rs  main.rs
experiment/boc-rs/: Behaviour_Oriented_Concurrency.md  Cargo.toml
experiment/boc-rs/src/: behavior.rs  main.rs  tests.rs
experiment/bv2av-rs/: Cargo.toml
experiment/bv2av-rs/src/: flags.rs  main.rs
experiment/cpp-rs-interop/: Cargo.toml  Makefile
experiment/cpp-rs-interop/src/: byte_slice_view.rs  lib.rs  user-original.cpp  user-rs-lib.h  user-using-rs-lib.cpp
experiment/cuda/: .clang-format  .clangd  .gitignore
experiment/cuda/async-copy/: Makefile  main.cu
experiment/cuda/matrix-multiply/: Makefile  main.cu
experiment/cuda/transposed-multiply/: main.cu
experiment/cuda/tutorial/: Makefile  add.cu
experiment/dll/: Makefile  main.c
experiment/external-sort/: Makefile  bin2txt.py  cg.sh  gen.py  main.cpp
experiment/gpu-kernel/flash-decode/: attn-v2.py  decode.py  mla.py
experiment/ld-preload-rs/: Cargo.toml  Makefile
experiment/ld-preload-rs/src/: lib.rs
experiment/linux-linker-script/: .gitignore  Cargo.toml  Makefile
experiment/linux-linker-script/src/: ast.rs  ldv1.pest  ldv2.pest  main.rs  pest.rs
experiment/linux-linker-script/src/pest/: ast.rs  commands.rs  expression.rs  linker_script.rs  parser.rs
experiment/lock-ordering-rs/: Cargo.toml
experiment/lock-ordering-rs/src/: lib.rs
experiment/lock-ordering-rs/tests/fail/: a_d.rs  a_d.stderr  b_a.rs  b_a.stderr
experiment/lock-ordering-rs/tests/pass/: a_b_c_d.rs  a_b_d.rs  a_c_d.rs  b_d.rs
experiment/mmap/: Makefile  mmap.c
experiment/pcre-ffi-rs/: .gitignore  Cargo.toml  build.rs  download.sh  input.txt  nc.sh
experiment/pcre-ffi-rs/src/: main.rs
experiment/static-dummy-bss/: Makefile  common.c  common.h  derive.c  derive.h  main.c
experiment/static-var-in-bss/: Makefile  main.c  main.rs
experiment/thread-local-rs/: Cargo.toml  Makefile  build.rs
experiment/thread-local-rs/src/: main.c  main.rs  thread_local.c
experiment/track-caller-rs/: Cargo.toml
experiment/track-caller-rs/src/: lib.rs  main.rs  sync.rs
experiment/track-caller-rs/src/sync/: refcell.rs
experiment/trie-rs/: Cargo.toml
experiment/trie-rs/src/: main.rs  trie.rs  trie_node.rs  trie_store.rs
experiment/xtask/: Cargo.toml
experiment/xtask/src/: clean.rs  clippy.rs  flags.rs  main.rs
experiment/xtask/src/clippy/: args.rs  command.rs  export.rs
labs/cmu-15-213/: download.sh
labs/cmu-15-213/0.C lab/: cord.c  queue.c  queue.h
(+10 files in other folders)
