[workspace]
resolver = "2"
members = [
    "art-rs",
    "boc-rs",
    "bv2av-rs",
    "cpp-rs-interop",
    "ld-preload-rs",
    "linux-linker-script",
    "lock-ordering-rs",
    "pcre-ffi-rs",
    "thread-local-rs",
    "track-caller-rs",
    "trie-rs",
    "xtask",
]

[workspace.package]
edition = "2024"
