[package]
name = "art-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", default-features = false }
rand_pcg = { version = "0.3.1", default-features = false }
clap = { version = "4.5.20", features = ["derive"] }

# https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
# [[bin]]
# name = "art-rs"
# required-features = ["clap"]
