[package]
name = "linker-script-formatter"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["display", "from"] }
pest = { version = "2.7.14", optional = true }
pest_derive = { version = "2.7.14", optional = true }

[features]
default = ["pest"]
pest = ["dep:pest", "dep:pest_derive"]
