[package]
name = "pcre-ffi"
version = "0.1.0"
edition.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1"
http_req = "0.13"
sha2 = "0.10"
bzip2 = "0.5"
tar = "0.4"
