[package]
name = "thread-local-rs"
description = "experiment from https://matklad.github.io/2020/10/03/fast-thread-locals-in-rust.html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.152"
